--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,16 +1,18 @@
 galaxy_info:
   author: Alberta Motor Association
-  description: Base Nginx Configuration fo Ubuntu 16.04
+  description: Base Nginx Configuration for Ubuntu
   company: Alberta Motor Association
 
   license: MIT
 
-  min_ansible_version: 2.0
+  min_ansible_version: 2.7
 
   platforms:
   - name: Ubuntu
     versions:
-    - xenial
+      - trusty
+      - xenial
+      - bionic
   galaxy_tags:
     - nginx
     - ssl
